--- a/JobPosts-React/src/components/HomePage/HomePage.module.css
+++ b/JobPosts-React/src/components/HomePage/HomePage.module.css
@@ -3,6 +3,7 @@
     font-size: 1.8vw;
     font-weight: 700;
     color: rgb(0,0,0,0.85);
+    font-family: 'Roboto', sans-serif;
 }
 
 #h3
@@ -10,6 +11,7 @@
     font-size: 2vw;
     font-weight: 700;
     color: rgb(0,0,0,0.85);
+    font-family: 'Roboto', sans-serif;
 }
 
 #search
@@ -26,6 +28,7 @@
     margin-left: 2vw;
     padding-left: 2vw;
     padding-right: 4vw;
+    font-family: 'Roboto', sans-serif;
 }
 #search:focus
 {
@@ -55,5 +58,6 @@
     padding: 0.8vw 1vw;
     margin-right: 1vw;
     border-radius: 0.7vw;
+    font-family: 'Roboto', sans-serif;
 
 }
