--- a/JobPosts-React/src/components/HomePage/HomePage.module.css
+++ b/JobPosts-React/src/components/HomePage/HomePage.module.css
@@ -20,12 +20,12 @@
     background-color: white;
     color: rgb(0,0,0,0.75);
     padding: 0.8vw 1vw;
-    width: 22vw;
+    width: 25vw;
     font-size: 0.8vw;
     height: fit-content;
-    border: transparent;
-    box-shadow: 0px 4px 10px 0px rgb(232,232,232);
-    margin-left: 2vw;
+    border: 1px solid rgb(0,0,0,0.6);
+    transition-duration: 0.3s;
+    margin-left: 6vw;
     padding-left: 2vw;
     padding-right: 4vw;
     font-family: 'Roboto', sans-serif;
@@ -33,6 +33,9 @@
 #search:focus
 {
     outline: none;
+    box-shadow: 0px 2px 5px 6px rgb(230,230,230);
+    transition-duration: 0.3s;
+    border: 1px solid rgb(0,0,0,0.8);
 }
 #submit
 {
@@ -49,15 +52,75 @@
     align-items: center;
 }
 
+#dropbtn
+{
+    height: 3vw;
+    width: fit-content;
+    margin: 0 1vw;
+    padding: 0.5vw;
+    background-color: transparent;
+    border: none;
+    color: rgb(0,0,0,0.8);
+    border-radius: 0.5vw;
+    font-size: 1vw;
+    font-weight: 500;
+    font-family: 'Roboto' sans-serif;
+    transition-duration: 0.3s;
+
+}
+
+#vertical
+{
+    width: 2px;
+    background-color: rgb(85,85,85);
+    height: 1.5vw;
+    margin: 0;
+    padding: 0;
+}
+
 #dropdown
 {
-    background-color: rgb(0,0,0,0.85);
-    color: white;
-    box-shadow: 0px 4px 10px 2px rgb(232,232,232);
-    font-size: 0.8vw;
-    padding: 0.8vw 1vw;
-    margin-right: 1vw;
-    border-radius: 0.7vw;
-    font-family: 'Roboto', sans-serif;
+    transition-duration: 0.3s;
+}
 
+#dropdown:hover
+{
+    transform: translateY(-5px);
+    transition-duration: 0.3s;
+}
+
+#dropdown:focus
+{
+    transform: translateY(-5px);
+    transition-duration: 0.3s;
+}
+
+#create
+{
+    height: 3vw;
+    width: fit-content;
+    margin: 0 1vw;
+    padding: 0.5vw;
+    background-color: transparent;
+    border: none;
+    color: rgb(0,0,0,0.8);
+    border-radius: 0.5vw;
+    font-size: 1vw;
+    font-weight: 500;
+    font-family: 'Roboto' sans-serif;
+    transition-duration: 0.3s;
+}
+
+/* #create:hover
+{
+    transition-duration: 0.3s;
+    background-color: rgb(38,38,38);
+    color: white;
+    border: none;
+} */
+
+#create:hover
+{
+    transform: translateY(-5px);
+    transition-duration: 0.3s;
 }
